# EcommerceReinaBackend

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  schema.yaml
.github/workflows/: release.yml
config/: exceptions.py  settings.py  urls.py
marketing/: admin.py  apps.py  mixins.py  models.py  serializers.py  signals.py  urls.py  views.py
marketing/migrations/: 0001_initial.py  0002_categoriainvestigacion_investigacion.py  0003_certificacion.py  0004_testimonio.py  0005_categoriablog_protocolo_blog.py  0006_categoria_alter_blog_categoria_and_more.py  0007_alter_categoria_tipo.py  0008_alter_protocolo_archivo_pdf_and_more.py  0009_alter_blog_autor_alter_blog_contenido_and_more.py  0010_alter_blog_slug_alter_categoria_slug_and_more.py
media/protocolos/documentos/: colorPaletteETFlowLogo_9io0bBN.txt
store/: admin.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_carrito_updated_at_alter_pedido_estado_and_more.py  0003_tarifaenvio_pedido_costo_envio_pedido_subtotal_and_more.py  0004_alter_producto_imagen_principal.py  0005_alter_direccion_ciudad_alter_direccion_departamento_and_more.py  0006_alter_producto_slug.py
templates/emails/: admin_nueva_venta.html  admin_nuevo_testimonio.html  bienvenida.html  confirmacion_pedido.html  nuevo_contenido.html  password_reset.html
users/: admin.py  managers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_foto_perfil.py  0003_user_recibir_newsletter_user_recibir_ofertas.py
